fixes explore nav on Safari desktop

--- a/styleguide/src/sass/components/_dashboard.scss
+++ b/styleguide/src/sass/components/_dashboard.scss
@@ -105,6 +105,7 @@ footer {
   height: 2.5em;
   overflow: hidden;
   display: flex;
+  display: -webkit-flex;
   align-items: center;
   padding: rhythm(.5);
 
@@ -118,7 +119,6 @@ footer {
     transition: all .7s ease;
     opacity: 0;
     display: inline-block;
-    width: 0;
   }
 
   &:hover,
